force-app/main/default/objects/ErpOrderGroup__c/ErpOrderGroup__c.object-meta.xml
<CustomObject>
    <label>ERP Order Group</label>
    <nameField>
        <displayFormat>{YYYY}-{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ERP Order Groups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>