force-app/main/default/objects/ErpOrderGroup__c/fields/AssetId__c.field-meta.xml
<CustomField>
    <fullName>AssetId__c</fullName>
    <label>Asset Id</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>ERP Order Groups</relationshipLabel>
    <relationshipName>ErpOrderGroup</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>