force-app/main/default/objects/ErpOrderGroup__c/fields/GroupKey__c.field-meta.xml
<CustomField>
    <fullName>GroupKey__c</fullName>
    <externalId>true</externalId>
    <label>Group Key</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>